--- a/Jueves.html
+++ b/Jueves.html
@@ -20,46 +20,45 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">PLANIFICACIÓN ESTRATÉGICA DE
-            RR.HH</h2>
+        <h2 class="titulo">INFORMÁTICA II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ANTONIO VERGES</p>
-        <p><strong>Sección:</strong> R-411</p>
-        <p><strong>Aula:</strong> E-11</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P411-2</p>
+        <p><strong>Aula:</strong> F-03</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>09:20</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
         <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
+        <p><strong>Profesor:</strong> </p>
         <p><strong>Sección:</strong> P511</p>
         <p><strong>Aula:</strong> A-19</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>09:20</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>10:40</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">LEGISLACIÓN EMPRESARIAL</h2>
+        <h2 class="titulo">CONTABILIDAD II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> MARY FINOL</p>
-        <p><strong>Sección:</strong> E713</p>
-        <p><strong>Aula:</strong> A-13</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P313</p>
+        <p><strong>Aula:</strong> C-18</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>12:40</strong></p>
+    <p class="hora"><strong>05:00</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>02:00</strong></p>
+    <p class="hora"><strong>06:20</strong></p>
 </div>
 </body>
 </html>
