--- a/Miercoles.html
+++ b/Miercoles.html
@@ -23,7 +23,7 @@
         <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
+        <p><strong>Profesor:</strong> </p>
         <p><strong>Sección:</strong> P511</p>
         <p><strong>Aula:</strong> A-14</p>
 </div>
@@ -34,31 +34,45 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">CONTABILIDAD I</h2>
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ROSALIA RUIZ</p>
-        <p><strong>Sección:</strong> M311</p>
-        <p><strong>Aula:</strong> C-17</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> M-1111</p>
+        <p><strong>Aula:</strong> A-04</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>09:20</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:40</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">INFORMÁTICA II</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P411-2</p>
+        <p><strong>Aula:</strong> F-09</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:40</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">LÓGICA</h2>
+        <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> JIMMY STAVISKY</p>
-        <p><strong>Sección:</strong> H221</p>
-        <p><strong>Aula:</strong> E-15</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> E-813</p>
+        <p><strong>Aula:</strong> A-17</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>12:40</strong></p>
+    <p class="hora"><strong>06:20</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>02:00</strong></p>
+    <p class="hora"><strong>07:40</strong></p>
 </div>
 </body>
 </html>
