--- a/Viernes.html
+++ b/Viernes.html
@@ -19,60 +19,18 @@
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
     <div class="contenedor">
-        <div class="cajaA">
-            <h2 class="titulo">CONTABILIDAD I</h2>
-        </div>
-        <div class="cajaB">
-            <p><strong>Profesor:</strong> ROSALIA RUIZ</p>
-            <p><strong>Sección:</strong> M311</p>
-            <p><strong>Aula:</strong> C-17</p>
+    <div class="cajaA">
+        <h2 class="titulo">CONTABILIDAD II</h2>
     </div>
-    <div class="horas">
-        <p class="hora"><strong>08:00</strong></p>
-        <p class="hora"><strong>a</strong></p>
-        <p class="hora"><strong>10:00</strong></p>
-    </div>
-    <div class="contenedor">
-        <div class="cajaA">
-            <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
-        </div>
-        <div class="cajaB">
-            <p><strong>Profesor:</strong> LERIE SOCORRO</p>
-            <p><strong>Sección:</strong> G511P6</p>
-            <p><strong>Aula:</strong> A-14</p>
-    </div>
-    <div class="horas">
-        <p class="hora"><strong>10:00</strong></p>
-        <p class="hora"><strong>a</strong></p>
-        <p class="hora"><strong>12:00</strong></p>
-    </div>
-    <div class="contenedor">
-        <div class="cajaA">
-            <h2 class="titulo">LÓGICA</h2>
-        </div>
-        <div class="cajaB">
-            <p><strong>Profesor:</strong> JIMMY STAVISKY</p>
-            <p><strong>Sección:</strong> H221</p>
-            <p><strong>Aula:</strong> E-15</p>
-    </div>
-    <div class="horas">
-        <p class="hora"><strong>12:40</strong></p>
-        <p class="hora"><strong>a</strong></p>
-        <p class="hora"><strong>02:00</strong></p>
-    </div>
-    <div class="contenedor">
-        <div class="cajaA">
-            <h2 class="titulo">LEGISLACIÓN EMPRESARIAL</h2>
-        </div>
-        <div class="cajaB">
-            <p><strong>Profesor:</strong> MARY FINOL</p>
-            <p><strong>Sección:</strong> E713</p>
-            <p><strong>Aula:</strong> A-13</p>
-    </div>
-    <div class="horas">
-        <p class="hora"><strong>07:40</strong></p>
-        <p class="hora"><strong>a</strong></p>
-        <p class="hora"><strong>09:00</strong></p>
-    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P313</p>
+        <p><strong>Aula:</strong> C-18</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>05:00</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>07:00</strong></p>
+</div>
 </body>
 </html>
