--- a/index.html
+++ b/index.html
@@ -20,46 +20,31 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">CONTABILIDAD I</h2>
+        <h2 class="titulo">INGLÉS II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ROSALIA RUIZ</p>
-        <p><strong>Sección:</strong> M311</p>
-        <p><strong>Aula:</strong> C-01</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> R411</p>
+        <p><strong>Aula:</strong> F-25</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>08:00</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>09:20</strong></p>
+    <p class="hora"><strong>10:00</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">PLANIFICACIÓN ESTRATÉGICA DE
-            RR.HH</h2>
+        <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> ANTONIO VERGES</p>
-        <p><strong>Sección:</strong> R-411</p>
-        <p><strong>Aula:</strong> E-15</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> E-813</p>
+        <p><strong>Aula:</strong> C-13-1</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>06:20</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> LERIE SOCORRO</p>
-        <p><strong>Sección:</strong> G511P6</p>
-        <p><strong>Aula:</strong> F-20</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>12:40</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>02:00</strong></p>
+    <p class="hora"><strong>07:40</strong></p>
 </div>
 </body>
 </html>
