--- a/Martes.html
+++ b/Martes.html
@@ -20,59 +20,17 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">LÓGICA</h2>
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> JIMMY STAVISKY</p>
-        <p><strong>Sección:</strong> H221</p>
-        <p><strong>Aula:</strong> E-15</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> M-1111</p>
+        <p><strong>Aula:</strong> C-05</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>08:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">DESARROLLO SUSTENTABLE</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> LERIE SOCORRO</p>
-        <p><strong>Sección:</strong> G511P6</p>
-        <p><strong>Aula:</strong> F-20</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>10:40</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
-        <p><strong>Sección:</strong> P511</p>
-        <p><strong>Aula:</strong> A-19</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>01:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>04:00</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">LEGISLACIÓN EMPRESARIAL</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> MARY FINOL</p>
-        <p><strong>Sección:</strong> E713</p>
-        <p><strong>Aula:</strong> A-19</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>05:00</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>06:40</strong></p>
 </div>
 </body>
 </html>
