--- a/Martes.html
+++ b/Martes.html
@@ -20,6 +20,20 @@
     </a>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">KICKINGBALL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
+        <p><strong>Sección:</strong> </p>
+        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>08:00 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:00 AM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
     </div>
     <div class="cajaB">
@@ -28,9 +42,9 @@
         <p><strong>Aula:</strong> C-05</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>10:40 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
 </div>
 </body>
 </html>
