--- a/Miercoles.html
+++ b/Miercoles.html
@@ -28,9 +28,9 @@
         <p><strong>Aula:</strong> A-14</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>08:00 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>09:20</strong></p>
+    <p class="hora"><strong>09:20 AM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
@@ -42,9 +42,9 @@
         <p><strong>Aula:</strong> A-04</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>09:20</strong></p>
+    <p class="hora"><strong>09:20 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>10:40 AM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
@@ -56,9 +56,9 @@
         <p><strong>Aula:</strong> F-09</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:40</strong></p>
+    <p class="hora"><strong>10:40 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
@@ -70,9 +70,9 @@
         <p><strong>Aula:</strong> A-17</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>06:20</strong></p>
+    <p class="hora"><strong>06:20 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>07:40</strong></p>
+    <p class="hora"><strong>07:40 PM</strong></p>
 </div>
 </body>
 </html>
