--- a/index.html
+++ b/index.html
@@ -28,9 +28,23 @@
         <p><strong>Aula:</strong> F-25</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>08:00</strong></p>
+    <p class="hora"><strong>08:00 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00</strong></p>
+    <p class="hora"><strong>10:00 AM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">KICKINGBALL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
+        <p><strong>Sección:</strong> </p>
+        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
@@ -42,9 +56,9 @@
         <p><strong>Aula:</strong> C-13-1</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>06:20</strong></p>
+    <p class="hora"><strong>06:20 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>07:40</strong></p>
+    <p class="hora"><strong>07:40 PM</strong></p>
 </div>
 </body>
 </html>
