--- a/Jueves.html
+++ b/Jueves.html
@@ -48,6 +48,34 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> M-1111</p>
+        <p><strong>Aula:</strong> A-04</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:40 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00 AM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">KICKINGBALL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
+        <p><strong>Sección:</strong> </p>
+        <p><strong>Aula:</strong> CANCHA DE SOFTBALL</p>
+    </div>
+    <div class="horas">
+        <p class="hora"><strong>12:00 PM</strong></p>
+        <p class="hora"><strong>a</strong></p>
+        <p class="hora"><strong>05:00 PM</strong></p>
+    </div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">CONTABILIDAD II</h2>
     </div>
     <div class="cajaB">
