--- a/Martes.html
+++ b/Martes.html
@@ -18,20 +18,21 @@
     <a href="Miercoles.html">
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">KICKINGBALL</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
-        <p><strong>Sección:</strong> </p>
-        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
 </div>
-<div class="horas">
-    <p class="hora"><strong>08:00 AM</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>10:00 AM</strong></p>
-</div>
+        <div class="contenedor">
+        <div class="cajaA">
+            <h2 class="titulo">CONTABILIDAD II</h2>
+        </div>
+        <div class="cajaB">
+            <p><strong>Profesor:</strong> </p>
+            <p><strong>Sección:</strong> P313</p>
+            <p><strong>Aula:</strong> C-18</p>
+        </div>
+        <div class="horas">
+            <p class="hora"><strong>08:00 AM</strong></p>
+            <p class="hora"><strong>a</strong></p>
+            <p class="hora"><strong>10:00 AM</strong></p>
+        </div>
 <div class="contenedor">
     <div class="cajaA">
         <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
@@ -45,6 +46,20 @@
     <p class="hora"><strong>10:40 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>12:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">KICKINGBALL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
+        <p><strong>Sección:</strong> </p>
+        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>02:00 PM</strong></p>
 </div>
 </body>
 </html>
