--- a/index.html
+++ b/index.html
@@ -34,17 +34,45 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">INFORMÁTICA II</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P411-2</p>
+        <p><strong>Aula:</strong> F-09</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">KICKINGBALL</h2>
     </div>
     <div class="cajaB">
         <p><strong>Profesor:</strong> VERENA PICHÓN</p>
         <p><strong>Sección:</strong> </p>
-        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+        <p><strong>Aula:</strong> CANCHA DE SOFTBALL</p>
 </div>
 <div class="horas">
     <p class="hora"><strong>12:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
     <p class="hora"><strong>03:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P511</p>
+        <p><strong>Aula:</strong> A-14</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>03:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>06:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
