--- a/Viernes.html
+++ b/Viernes.html
@@ -34,17 +34,31 @@
     </div>
     <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> E-813</p>
+        <p><strong>Aula:</strong> C-13-1</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
+</div>
+    <div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">KICKINGBALL</h2>
     </div>
     <div class="cajaB">
         <p><strong>Profesor:</strong> VERENA PICHÓN</p>
         <p><strong>Sección:</strong> </p>
-        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+        <p><strong>Aula:</strong> CANCHA DE SOFTBALL</p>
     </div>
     <div class="horas">
-        <p class="hora"><strong>10:00 AM</strong></p>
-        <p class="hora"><strong>a</strong></p>
         <p class="hora"><strong>12:00 PM</strong></p>
+        <p class="hora"><strong>a</strong></p>
+        <p class="hora"><strong>05:00 PM</strong></p>
     </div>
         <div class="contenedor">
         <div class="cajaA">
@@ -61,5 +75,6 @@
             <p class="hora"><strong>07:00 PM</strong></p>
         </div>
     </div>
+    
 </body>
 </html>
