--- a/Jueves.html
+++ b/Jueves.html
@@ -62,18 +62,32 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">KICKINGBALL</h2>
+        <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
-        <p><strong>Sección:</strong> </p>
-        <p><strong>Aula:</strong> CANCHA DE SOFTBALL</p>
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> E-813</p>
+        <p><strong>Aula:</strong> C-13-1</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">INGLÉS II</h2>
     </div>
-    <div class="horas">
-        <p class="hora"><strong>12:00 PM</strong></p>
-        <p class="hora"><strong>a</strong></p>
-        <p class="hora"><strong>05:00 PM</strong></p>
-    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> R411</p>
+        <p><strong>Aula:</strong> F-25</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>03:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>05:00 PM</strong></p>
+</div>
 <div class="contenedor">
     <div class="cajaA">
         <h2 class="titulo">CONTABILIDAD II</h2>
