--- a/Miercoles.html
+++ b/Miercoles.html
@@ -62,6 +62,20 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">CONTABILIDAD II</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> </p>
+        <p><strong>Sección:</strong> P313</p>
+        <p><strong>Aula:</strong> C-18</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>12:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">INGLÉS II</h2>
     </div>
     <div class="cajaB">
@@ -70,9 +84,9 @@
         <p><strong>Aula:</strong> F-25</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>05:00 PM</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>06:20 PM</strong></p>
+    <p class="hora"><strong>06:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
