--- a/Viernes.html
+++ b/Viernes.html
@@ -53,7 +53,7 @@
     <div class="cajaB">
         <p><strong>Profesor:</strong> VERENA PICHÓN</p>
         <p><strong>Sección:</strong> </p>
-        <p><strong>Aula:</strong> CANCHA DE SOFTBALL</p>
+        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
     </div>
     <div class="horas">
         <p class="hora"><strong>12:00 PM</strong></p>
