--- a/Martes.html
+++ b/Martes.html
@@ -24,7 +24,7 @@
             <h2 class="titulo">CONTABILIDAD II</h2>
         </div>
         <div class="cajaB">
-            <p><strong>Profesor:</strong> </p>
+            <p><strong>Profesor:</strong> ROMER ALVAREZ</p>
             <p><strong>Sección:</strong> P313</p>
             <p><strong>Aula:</strong> C-18</p>
         </div>
@@ -38,7 +38,7 @@
         <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
         <p><strong>Sección:</strong> M-1111</p>
         <p><strong>Aula:</strong> C-05</p>
 </div>
