--- a/Miercoles.html
+++ b/Miercoles.html
@@ -23,7 +23,7 @@
         <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
         <p><strong>Sección:</strong> P511</p>
         <p><strong>Aula:</strong> A-14</p>
 </div>
@@ -37,7 +37,7 @@
         <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
         <p><strong>Sección:</strong> M-1111</p>
         <p><strong>Aula:</strong> A-04</p>
 </div>
@@ -51,7 +51,7 @@
         <h2 class="titulo">INFORMÁTICA II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> YELITZA VALLE</p>
         <p><strong>Sección:</strong> P411-2</p>
         <p><strong>Aula:</strong> F-09</p>
 </div>
@@ -65,7 +65,7 @@
         <h2 class="titulo">CONTABILIDAD II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> ROMER ALVAREZ</p>
         <p><strong>Sección:</strong> P313</p>
         <p><strong>Aula:</strong> C-18</p>
 </div>
@@ -79,7 +79,7 @@
         <h2 class="titulo">INGLÉS II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> GUSTAVO LESCHER</p>
         <p><strong>Sección:</strong> R411</p>
         <p><strong>Aula:</strong> F-25</p>
 </div>
@@ -93,7 +93,7 @@
         <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> DANIEL CUBILLAN</p>
         <p><strong>Sección:</strong> E-813</p>
         <p><strong>Aula:</strong> A-17</p>
 </div>
