--- a/Viernes.html
+++ b/Viernes.html
@@ -23,7 +23,7 @@
         <h2 class="titulo">INGLÉS II</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> GUSTAVO LESCHER</p>
         <p><strong>Sección:</strong> R411</p>
         <p><strong>Aula:</strong> F-25</p>
     </div>
@@ -37,7 +37,7 @@
         <h2 class="titulo">ORGANIZACIÓN Y MÉTODOS</h2>
     </div>
     <div class="cajaB">
-        <p><strong>Profesor:</strong> </p>
+        <p><strong>Profesor:</strong> DANIEL CUBILLAN</p>
         <p><strong>Sección:</strong> E-813</p>
         <p><strong>Aula:</strong> C-13-1</p>
 </div>
@@ -65,7 +65,7 @@
             <h2 class="titulo">CONTABILIDAD II</h2>
         </div>
         <div class="cajaB">
-            <p><strong>Profesor:</strong> </p>
+            <p><strong>Profesor:</strong> ROMER ALVAREZ</p>
             <p><strong>Sección:</strong> P313</p>
             <p><strong>Aula:</strong> C-18</p>
         </div>
