--- a/Jueves.html
+++ b/Jueves.html
@@ -58,7 +58,7 @@
 <div class="horas">
     <p class="hora"><strong>10:40 AM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00 AM</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
