--- a/Miercoles.html
+++ b/Miercoles.html
@@ -62,20 +62,6 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
-        <h2 class="titulo">CONTABILIDAD II</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> ROMER ALVAREZ</p>
-        <p><strong>Sección:</strong> P313</p>
-        <p><strong>Aula:</strong> C-18</p>
-</div>
-<div class="horas">
-    <p class="hora"><strong>12:00 PM</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>03:00 PM</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
         <h2 class="titulo">INGLÉS II</h2>
     </div>
     <div class="cajaB">
@@ -84,9 +70,23 @@
         <p><strong>Aula:</strong> F-25</p>
 </div>
 <div class="horas">
+    <p class="hora"><strong>01:00 PM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">KICKINGBALL</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> VERENA PICHÓN</p>
+        <p><strong>Sección:</strong> </p>
+        <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
+</div>
+<div class="horas">
     <p class="hora"><strong>03:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>06:00 PM</strong></p>
+    <p class="hora"><strong>05:30 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
