--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
+        <p><strong>Sección:</strong> M-1111</p>
+        <p><strong>Aula:</strong> C-05</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:00 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">INFORMÁTICA II</h2>
     </div>
     <div class="cajaB">
@@ -42,9 +56,9 @@
         <p><strong>Aula:</strong> F-09</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>10:00 AM</strong></p>
+    <p class="hora"><strong>01:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>12:00 PM</strong></p>
+    <p class="hora"><strong>03:00 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
@@ -56,23 +70,9 @@
         <p><strong>Aula:</strong> CANCHA DE KICKINGBALL</p>
 </div>
 <div class="horas">
-    <p class="hora"><strong>12:00 PM</strong></p>
-    <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>03:00 PM</strong></p>
-</div>
-<div class="contenedor">
-    <div class="cajaA">
-        <h2 class="titulo">CALIDAD Y PRODUCTIVIDAD</h2>
-    </div>
-    <div class="cajaB">
-        <p><strong>Profesor:</strong> NINOSKA CHIRINOS</p>
-        <p><strong>Sección:</strong> P511</p>
-        <p><strong>Aula:</strong> A-14</p>
-</div>
-<div class="horas">
     <p class="hora"><strong>03:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>06:00 PM</strong></p>
+    <p class="hora"><strong>05:30 PM</strong></p>
 </div>
 <div class="contenedor">
     <div class="cajaA">
