--- a/Martes.html
+++ b/Martes.html
@@ -19,20 +19,20 @@
         <button class="bot2"><img src="https://cdn.icon-icons.com/icons2/1415/PNG/512/ic-next_97622.png"></button>
     </a>
 </div>
-        <div class="contenedor">
-        <div class="cajaA">
-            <h2 class="titulo">CONTABILIDAD II</h2>
-        </div>
-        <div class="cajaB">
-            <p><strong>Profesor:</strong> ROMER ALVAREZ</p>
-            <p><strong>Sección:</strong> P313</p>
-            <p><strong>Aula:</strong> C-18</p>
-        </div>
-        <div class="horas">
-            <p class="hora"><strong>08:00 AM</strong></p>
-            <p class="hora"><strong>a</strong></p>
-            <p class="hora"><strong>10:00 AM</strong></p>
-        </div>
+<div class="contenedor">
+    <div class="cajaA">
+        <h2 class="titulo">INFORMÁTICA II</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> YELITZA VALLE</p>
+        <p><strong>Sección:</strong> P411-2</p>
+        <p><strong>Aula:</strong> F-09</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>09:00 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>10:40 AM</strong></p>
+</div>
 <div class="contenedor">
     <div class="cajaA">
         <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
@@ -59,7 +59,7 @@
 <div class="horas">
     <p class="hora"><strong>12:00 PM</strong></p>
     <p class="hora"><strong>a</strong></p>
-    <p class="hora"><strong>02:00 PM</strong></p>
+    <p class="hora"><strong>01:00 PM</strong></p>
 </div>
 </body>
 </html>
