--- a/Jueves.html
+++ b/Jueves.html
@@ -48,6 +48,20 @@
 </div>
 <div class="contenedor">
     <div class="cajaA">
+        <h2 class="titulo">INVESTIGACIÓN DE OPERACIONES</h2>
+    </div>
+    <div class="cajaB">
+        <p><strong>Profesor:</strong> DANIEL BENITEZ</p>
+        <p><strong>Sección:</strong> M-1111</p>
+        <p><strong>Aula:</strong> C-05</p>
+</div>
+<div class="horas">
+    <p class="hora"><strong>10:40 AM</strong></p>
+    <p class="hora"><strong>a</strong></p>
+    <p class="hora"><strong>12:00 PM</strong></p>
+</div>
+<div class="contenedor">
+    <div class="cajaA">
         <h2 class="titulo">CONTABILIDAD II</h2>
     </div>
     <div class="cajaB">
